fix side bar on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,10 @@
-html,body{
+html,body
+{
     width: 100%;
     height: 100%;
     margin: 0px;
     padding: 0px;
+    overflow-x: hidden;
 }
 
 ul {
@@ -358,16 +360,6 @@ h1{
   	width: auto; /* Account for margins + border values */
   	float: left;
     padding: 5px 15px;
-  }
-
-  .footer {
-     font-family: 'courier';
-     text-align: center;
-     padding-top: 15px;
-     bottom: 0;
-     width: 100%;
-     height: 30px;   /* Height of the footer */
-     background: #7F8C8D
   }
 
 }
